src/app/page.module.css
.h1_detail {
  color: var(--primary);
}

.subtitle {
  color: var(--neutral);
  font-weight: 300;
  margin-bottom: var(--space3);
}

.hero {
  min-height: 100dvh;
  margin-top: 14dvh;
}

.hero_text {
  text-align: center;
  margin-bottom: var(--space8);
}

.hero_text h1 {
  width: 60dvw;
  margin: auto;
  margin-bottom: var(--space7);
}

@media screen and (max-width: 800px) {
  .hero_text h1 {
    width: 100%;
  }
}

.searchbar {
  margin-bottom: 16dvh;
}

@media screen and (max-width: 820px) {
  .searchbar {
    margin-bottom: 10dvh;
  }
}

@media screen and (max-width: 768px) {
  .hero_container {
    gap: var(--space6);
  }
}

.properties_container {
  justify-content: space-between;
  margin-top: var(--space8);
  display: flex;
  gap: var(--space6);
  row-gap: var(--space8);
  flex-wrap: wrap;
  width: 100%;
}

@media screen and (max-width: 1184px) {
  .properties_container {
    justify-content: center;
    column-gap: var(--space10);
  }
}

@media screen and (max-width: 605px) {
  .section {
    text-align: center;
  }

  .properties_container {
    justify-content: center;
    gap: var(--space6);
  }

}

.properties_container>* {
  min-width: 300px;
  max-width: 325px;
}

.properties {
  padding: var(--space11) 0;
  position: relative;
}

.properties:last-of-type::before {
  content: "";
  display: block;
  width: 100vw;
  left: -200;
  top: 0;
  bottom: 0;
  background: #F7F7F7;
  z-index: -1;
  position: absolute;
}

.h3 {
  font-weight: 600;
}

